--- a/index.html
+++ b/index.html
@@ -2,260 +2,216 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prestige Griffin</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <style>
     :root {
-      --maroon: #6F0E0B;
-      --gold: #C99E47;
-      --cream: #f5eac2;
-      --soft-gold: rgba(201, 158, 71, 0.15);
+      --primary-red: #7a0a0a;
+      --dark-red: #4a0303;
+      --gold: #d4af37;
+      --cream: #f5f5dc;
     }
-
-    body, html {
+    body {
       margin: 0;
-      padding: 0;
       font-family: 'Open Sans', sans-serif;
-      background-color: var(--maroon);
-      color: var(--gold);
-      overflow-x: hidden;
+      background-color: var(--dark-red);
+      color: var(--cream);
     }
-
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 0;
-    }
-
-    .splash {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: var(--maroon);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 10;
-      animation: fadeOut 2s ease-in-out forwards;
-      animation-delay: 3s;
-    }
-
-    .splash img {
-      max-width: 220px;
-      margin-bottom: 1rem;
-    }
-
-    .splash h1 {
-      font-size: 1.5rem;
-      font-family: 'Playfair Display', serif;
-      color: var(--gold);
-    }
-
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; }
-    }
-
-    .main {
-      display: none;
-      position: relative;
-      z-index: 5;
-      animation: fadeIn 1s ease-in 3.5s forwards;
-    }
-
-    @keyframes fadeIn {
-      to { display: block; opacity: 1; }
-    }
-
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
-      background-color: var(--maroon);
-      position: relative;
-      z-index: 5;
+      border-bottom: 2px solid var(--gold);
+      background-color: var(--primary-red);
     }
-
-    header img {
-      max-height: 100px;
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
-
-    nav a {
-      color: var(--gold);
-      margin-left: 1.5rem;
-      text-decoration: none;
-      font-weight: bold;
+    .brand img {
+      max-height: 50px;
+      animation: fadeInDown 1.5s ease;
     }
-
-    .hero {
-      text-align: center;
-      padding: 5rem 2rem 3rem;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
+    .brand h1 {
       font-family: 'Playfair Display', serif;
       color: var(--gold);
-    }
-
-    .hero p {
-      max-width: 800px;
-      margin: 1rem auto;
-      color: var(--cream);
-      font-size: 1.2rem;
-    }
-
-    section {
-      padding: 4rem 2rem;
-      max-width: 1000px;
-      margin: auto;
-      text-align: center;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      font-family: 'Playfair Display', serif;
-      margin-bottom: 1rem;
-      color: var(--gold);
-    }
-
-    section p {
       font-size: 1.1rem;
-      line-height: 1.7;
+      margin: 0;
+      font-weight: 900;
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
+    }
+    @keyframes fadeInDown {
+      from {opacity: 0; transform: translateY(-50px);} 
+      to {opacity: 1; transform: translateY(0);} 
+    }
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+    }
+    nav a {
+      text-decoration: none;
+      font-weight: 900;
+      color: var(--gold);
+      font-size: 1.1rem;
+      text-transform: uppercase;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
       color: var(--cream);
     }
-
-    footer {
+    .intro {
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background-color: #1a0605;
+      padding: 5rem 2rem;
+      position: relative;
+      overflow: hidden;
+    }
+    .intro h2 {
+      color: var(--gold);
+      font-family: 'Playfair Display', serif;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      position: relative;
+      z-index: 2;
+    }
+    .intro p {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: var(--cream);
+      position: relative;
+      z-index: 2;
+    }
+    /* Geometric animated background */
+    .intro::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: repeating-linear-gradient(45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px),
+                  repeating-linear-gradient(-45deg, rgba(212,175,55,0.1) 0px, rgba(212,175,55,0.1) 2px, transparent 2px, transparent 40px);
+      background-size: 80px 80px;
+      animation: moveGrid 8s linear infinite;
+      z-index: 1;
+    }
+    @keyframes moveGrid {
+      0% {background-position: 0 0, 0 0;}
+      100% {background-position: 80px 80px, -80px -80px;}
+    }
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      padding: 3rem;
+    }
+    .service-box {
+      background: rgba(212, 175, 55, 0.05);
+      border: 2px solid var(--gold);
+      border-radius: 15px;
+      padding: 2rem;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: fadeIn 1.5s ease;
+    }
+    .service-box:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+      background: rgba(212, 175, 55, 0.15);
+    }
+    .service-box h3 {
+      color: var(--gold);
+      margin-bottom: 1rem;
+      font-family: 'Playfair Display', serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      font-size: 1.3rem;
+    }
+    .service-box h3 i {
+      font-size: 1.6rem;
+      color: var(--gold);
+    }
+    .service-box p {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+      40% {transform: translateY(-10px);} 
+      60% {transform: translateY(-5px);} 
+    }
+    .footer {
+      background: var(--primary-red);
+      text-align: center;
+      padding: 0.5rem;
+      margin-top: 2rem;
+    }
+    .footer p {
+      margin: 0;
+      font-size: 0.8rem;
       color: var(--gold);
     }
   </style>
 </head>
 <body>
-
-  <canvas id="bg-canvas"></canvas>
-
-  <!-- Splash Screen -->
-  <div class="splash">
-    <img src="PG.png" alt="Prestige Griffin Logo" class="h-20 w-auto rounded-full border-2 border-[#D4AF37] shadow-lg" />
-    <h1>Finance • Technology • Defence</h1>
-  </div>
-
-  <!-- Main Content -->
-  <div class="main">
-    <header>
-      <img src="PG.png" alt="Prestige Griffin Logo">
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </header>
-
-    <section class="hero">
+  <header>
+    <div class="brand">
+      <img src="/mnt/data/PG.png" alt="Prestige Griffin Logo">
       <h1>Prestige Griffin</h1>
-      <p>
-        Empowering global innovation and elite partnerships across finance, technology, and defense. Our solutions are discreet, strategic, and meticulously executed for impact at the highest levels.
-      </p>
-    </section>
+    </div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Services</a>
+      <a href="#">About Us</a>
+      <a href="#">Contact Us</a>
+    </nav>
+  </header>
 
-    <section>
-      <h2>Finance & Banking</h2>
-      <p>
-        We facilitate Series A capital raises for high-growth ventures and provide privileged access to Level 25 banking services, tailored for clients requiring discrete wealth operations, liquidity movement, and global financial access.
-      </p>
-    </section>
+  <section class="intro">
+    <h2 data-aos="fade-up">Advisory & Strategic Solutions</h2>
+    <p data-aos="fade-up" data-aos-delay="200">
+      We specialize in finance, banking, technology, defense, and commodities trading. Providing expert insights and solutions that help our clients navigate complex industries and achieve lasting growth.
+    </p>
+  </section>
 
-    <section>
-      <h2>Technology Consulting</h2>
-      <p>
-        From ideation to deployment, we engineer financial and neobanking applications, build custom platforms, and deliver full-stack development, UI/UX, and agile product management services that bring fintech visions to life.
-      </p>
-    </section>
+  <section class="services">
+    <div class="service-box" data-aos="fade-up" data-aos-delay="100">
+      <h3><i class="fas fa-university"></i> Finance & Banking</h3>
+      <p>Expert advisory in global finance, investment strategies, and banking solutions tailored to our clients’ needs.</p>
+    </div>
+    <div class="service-box" data-aos="fade-up" data-aos-delay="200">
+      <h3><i class="fas fa-microchip"></i> Technology</h3>
+      <p>Driving innovation with digital transformation, AI integration, and scalable technology solutions.</p>
+    </div>
+    <div class="service-box" data-aos="fade-up" data-aos-delay="300">
+      <h3><i class="fas fa-shield-alt"></i> Defence & Arms Advisory</h3>
+      <p>Providing strategic insights and partnerships in defense and arms, ensuring sustainable security investments.</p>
+    </div>
+    <div class="service-box" data-aos="fade-up" data-aos-delay="400">
+      <h3><i class="fas fa-oil-can"></i> Commodities Trading</h3>
+      <p>Specialized in global commodities such as oil, gas, and raw materials, delivering value through trusted trading networks.</p>
+    </div>
+  </section>
 
-    <section>
-      <h2>Defense & Arms Advisory</h2>
-      <p>
-        Prestige Griffin connects verified buyers and authorized global defense suppliers. We specialize in discreet transactions for tactical equipment and weaponry under full compliance with international arms trade regulations.
-      </p>
-    </section>
+  <footer class="footer">
+    <p>© 2018 Prestige Griffin. All rights reserved.</p>
+  </footer>
 
-    <footer>
-      &copy; 2025 Prestige Griffin. All rights reserved.
-    </footer>
-  </div>
-
-  <!-- 3D Particle Background Script -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    const canvas = document.getElementById('bg-canvas');
-    const ctx = canvas.getContext('2d');
-    let width, height, particles = [];
-
-    function resizeCanvas() {
-      width = canvas.width = window.innerWidth;
-      height = canvas.height = window.innerHeight;
-    }
-
-    window.addEventListener('resize', resizeCanvas);
-    resizeCanvas();
-
-    class Particle {
-      constructor() {
-        this.x = Math.random() * width;
-        this.y = Math.random() * height;
-        this.r = Math.random() * 2 + 1;
-        this.dx = (Math.random() - 0.5) * 0.5;
-        this.dy = (Math.random() - 0.5) * 0.5;
-      }
-
-      move() {
-        this.x += this.dx;
-        this.y += this.dy;
-        if (this.x < 0 || this.x > width) this.dx *= -1;
-        if (this.y < 0 || this.y > height) this.dy *= -1;
-      }
-
-      draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.r, 0, Math.PI * 2);
-        ctx.fillStyle = 'var(--soft-gold)';
-        ctx.fill();
-      }
-    }
-
-    function initParticles(num = 100) {
-      particles = [];
-      for (let i = 0; i < num; i++) {
-        particles.push(new Particle());
-      }
-    }
-
-    function animate() {
-      ctx.clearRect(0, 0, width, height);
-      particles.forEach(p => {
-        p.move();
-        p.draw();
-      });
-      requestAnimationFrame(animate);
-    }
-
-    initParticles();
-    animate();
-
-    // Splash screen logic
-    setTimeout(() => {
-      document.querySelector('.splash').style.display = 'none';
-      document.querySelector('.main').style.display = 'block';
-    }, 4000);
+    AOS.init({
+      duration: 1200,
+    });
   </script>
-
 </body>
 </html>
